--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,132 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.home{
+  background: url('./static/background.jpg');
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  background-size: cover;
+  background-position-y: 60%;
+  background-repeat: no-repeat;
+  height: 100vh;
+  color: white;
+  align-content: center;
+  text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title-box{
+  display: inline-block;
+  text-align: center;
+  align-content: center;
+  margin-top: 10%;
+  width: 50%;
+ 
+}
+.title-box h1, .title-box h2{
+  letter-spacing: .5rem;
+  word-spacing: .3rem;
+  margin: 0;
+}
+.title-box h1{
+  font-size: 3.6rem;
+  padding: .3em 1.4em;
+  border: 7px solid white;
+}
+.title-box h2{
+  font-size: 1.7rem;
+  padding: 1rem 0;
+  border-bottom: 2px solid white;
+}
+.social-box{
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  left: 30%;
+  width: 40%;
+}
+.social-box a{
+  text-decoration: none;
+  color: white;
+  justify-content: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 10%;
+  position: relative;
+}
+.social-box span{
+  margin: 0;
+  font-size: .9rem;
+  font-weight: 500;
+  color: transparent;
+  transition: .25s ease-in-out;
+}
+.social-box a:hover>span{
+  transform: scale(1.3);
+  color: white
+}
+.social-box i{
+  font-size: 2rem;
+  margin: 1em 1em 0.3em 1em;
+  transition: .25s ease-in-out;
+}
+.social-box a:hover>i{
+  transform: scale(1.3);
+}
+.about{  
+  margin-top: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.info{
+  width: 50%;
+  margin-bottom: 10px;
+}
+.profile-container{
+  width: 20%;
+  overflow: hidden;
+}
+.profile-container img{
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.skills{
+  background-color: gray;
+  width: 50%;
+  height: 40%;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+
+}
+.skills img{
+  width: 6%;
+  margin: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.project{
+  background-color: greenyellow;
+  height: 100vh;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contact{
+  background-color: gray;
+  height: 100vh;
 }
