--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@
   color: white;
   align-content: center;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .title-box{
   display: inline-block;
@@ -53,7 +57,6 @@
   display: flex;
   position: relative;
   justify-content: space-between;
-  left: 30%;
   width: 40%;
 }
 .social-box a{
@@ -129,4 +132,106 @@
 .contact{
   background-color: gray;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40%;
+}
+.contact-email, .contact-name{
+  font-size: 1rem;
+  padding: 5px 10px;
+  border: 2px solid #333;
+  margin: 5px 0 10px;
+}
+.contact-email, .contact-name{
+  width: 45%;
+}
+.contact-message{
+  width: 96%;
+  resize: vertical;
+  border: 2px solid #333;
+  font-size: 1rem;
+  padding: 5px 10px;
+  margin: 5px 0 10px;
+  min-height: 130px;
+  max-height: 29vh;
+}
+.email-name-container{
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+}
+.btn{
+  width: 40%;
+  margin: 5px auto;
+  font-size: 1.1rem;
+  font-weight: 700;
+  padding: .5rem;
+  border: 2px solid #333;
+  background-color: #eee;
+  transition: .3s ease-in-out;
+}
+.btn:hover{
+  background: #333;
+  color: #eee;
+  border: 2px solid #eee;
+}
+.find-me{
+  font-weight: 700;
+  font-size: 1.5rem;
+  color: white;
+  border-bottom: 2px solid white;
+  width: 40%;
+  padding-bottom: 10px;
+  margin-top: 7rem;
+}
+.project-card{
+  border: 1px solid red;
+  display: flex;
+  right: 0;
+  transition: .2s;
+}
+.project-card:hover>.project-img{
+  left: 5%;
+  transition-delay: 0s;
+}
+.project-card:hover>.project-info{
+  right: 5%;
+  opacity: 100;
+  transition-delay: 0s;
+}
+
+.project-img{
+  position: relative;
+  left: 30%;
+  width: 480px;
+  height: 280px;
+  display: flex;
+  transition: .5s ease-in-out 180s;
+}
+.project-img img{
+  width:  100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  border: 1px solid #000;
+  border-radius: 8px;
+  margin: 5px;
+}
+
+.project-info{
+  position: absolute;
+  right: 50%;
+  border: 1px solid red;
+  width: 480px;
+  height: 280px;
+  opacity: 0;
+  transition: .7s ease-in-out 180s;
 }
