--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@
   background-color: greenyellow;
   height: 100vh;
 }
-.contact{
+.contact-container{
   background-color: gray;
   height: 100vh;
   display: flex;
@@ -138,11 +138,12 @@
   align-items: center;
 }
 
-.contact form{
+.contact-container form{
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 40%;
+  margin-top: 40px;
 }
 .contact-email, .contact-name{
   font-size: 1rem;
@@ -191,7 +192,7 @@
   border-bottom: 2px solid white;
   width: 40%;
   padding-bottom: 10px;
-  margin-top: 7rem;
+  margin-top: 10rem;
 }
 .project-card{
   border: 1px solid red;
@@ -245,6 +246,3 @@
   left: 0;
 }
 
-.test{
-  height: 100vh;
-}
