--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   width: 100%;
   padding: 0;
   height: 100vh;
+}
+.home-container{
+  top: 20%;
+  left: 0;
+  padding: 0;
+  position: relative;
   color: #79E8B5;
   font-family: 'Nunito', sans-serif;
   align-content: center;
