--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 *{
   margin: 0;
   padding: 0;
-  
+  font-family: 'Nunito', sans-serif;
 }
 .App {
-  text-align: center;
   padding: 0;
   margin: 0;
   width: 100%;
@@ -14,7 +13,7 @@
 }
 
 .home{
-  background-color: #39393A;
+  background-color: #FE9000;
   background: url('./static/background2.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -26,10 +25,10 @@
   color: #79E8B5;
 }
 .home-container{
-  top: 20%;
+  top: 30%;
   left: 0;
 }
-.home-container, .about-container{
+.home-container, .about-container,.project{
   padding: 0;
   position: relative;
   font-family: 'Nunito', sans-serif;
@@ -60,13 +59,27 @@
   font-size: 1.7rem;
   padding: 1rem 0;
   color: #6DD1A3;
-  border-bottom: 2px solid #FF8552;
+  
 }
 .social-box{
+  border-top: 2px solid #FF8552;
+}
+.social-box, .social-box-footer{
   display: flex;
   position: relative;
   justify-content: space-between;
   width: 40%;
+  
+}
+.social-box-footer a{
+  color: black;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+  position: relative;
 }
 .social-box a{
   text-decoration: none;
@@ -88,16 +101,33 @@
 .social-box a:hover>span{
   transform: scale(1.3);
   color: #61BA91;
-  
 }
-.social-box i{
+
+.social-box i, .social-box-footer i{
   font-size: 2rem;
   margin: 1em 1em 0.3em 1em;
-  transition: .25s ease-in-out;
+  transition: .25s ease-in-out
 }
 .social-box a:hover>i{
   transform: scale(1.3);
-  
+  animation: bubble 1s forwards;
+}
+@keyframes bubble {
+  0%{
+    transform: scale(1.3) 
+  }
+  25%{
+    transform: scale(1.7)
+  }
+  50%{
+    transform: scale(1.2)
+  }
+  75%{
+    transform: scale(1.5)
+  }
+  100%{
+    transform: scale(1.3);
+  }
 }
 .about{  
   margin-top: 0;
@@ -110,7 +140,8 @@
   height: 100vh;
 }
 .about-container h1{
-  top: 5%;
+  top: 2%;
+  left: 35%;
   font-size: 2.5rem;
   position: absolute;
   color: #ff543b;
@@ -118,18 +149,36 @@
 }
 .info{
   width: 60%;
+  text-align: justify;
   border-left: 1px solid #FF8552;
   border-radius: 30px;
   padding: 1em;
   margin-bottom: 10px;
   margin-top: 10px;
   right: 5%;
-  top: 15%;
+  top: 10%;
   position: absolute;
+}
+.info h3{
+  margin: auto 1em;
+}
+.info p{
+  margin: .5em 1em;
+  font-style: italic;
+}
+.info a{
+  color: #297373;
+  font-weight: 600;
+}
+.info a:hover{
+  cursor: pointer;
+  color:#ff543b;
+  font-weight: 700;
 }
 .profile-container{
   position: absolute;
   left: 5%;
+  top: 15%;
   width: 20%;
   padding-top: 20px;
   border-radius: 1000px;
@@ -148,7 +197,7 @@
   padding: 1em;
   width: 60%;
   right: 5%;
-  bottom: 8%;
+  bottom: 9%;
   display: flex;
   position: absolute;
   justify-content: space-evenly;
@@ -178,17 +227,67 @@
 .skills-node:hover>p{
   font-weight: 600;
 }
-.logo-container{
-  border: 1px solid green;
-  height: 80%;
+.project{
+  background-color: #444444;
+}
+.project h1{
+  margin: 2rem auto;
+  font-weight: 400;
+  font-size: 2.5rem;
+  color: #ff543b;
+}
+.project-card{
+  margin: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  right: 0;
+  width: 90%;
+  transition: .2s;
+}
+.project-img{
+  position: relative;
+  width: 480px;
+  height: 280px;
+  display: flex;
+  transition: .5s ease-in-out 180s;
+}
+.project-img img{
+  width:  100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 8px;
+  margin: 5px;
+  box-shadow:rgb(0, 0, 0) 0px 0px 15px 0px;
 }
 
-.project{
-  background-color: greenyellow;
-  height: 100vh;
+.project-info{
+  position: relative;
+  width: 480px;
+  height: 280px;
+  margin: 1em;
+  right: 0;
+  text-align: justify;
+}
+.project-info h3, .project-info p, .project-info a{
+  color: #F9F9F9;
+}
+.project-info .description{
+  font-size: 1.2em;
+  padding: 1em 0;
+}
+.project-info h3{
+  font-size: 1.5em;
+}
+.project-info span{
+  color: #53A07C
+}
+.project-info .tech{
+  color: #79E8B5;
 }
 .contact-container{
-  background-color: gray;
+  background-color: #F9F9F9;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -251,55 +350,7 @@
   padding-bottom: 10px;
   margin-top: 10rem;
 }
-.project-card{
-  border: 1px solid red;
-  display: flex;
-  right: 0;
-  transition: .2s;
-}
-.project-card:hover>.project-img{
-  left: 5%;
-  transition-delay: 0s;
-}
-.project-card:hover>.project-info{
-  right: 5%;
-  opacity: 100;
-  transition-delay: 0s;
-}
 
-.project-img{
-  position: relative;
-  left: 30%;
-  width: 480px;
-  height: 280px;
-  display: flex;
-  transition: .5s ease-in-out 180s;
-}
-.project-img img{
-  width:  100%;
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
-  border: 1px solid #000;
-  border-radius: 8px;
-  margin: 5px;
-}
 
-.project-info{
-  position: absolute;
-  right: 50%;
-  border: 1px solid red;
-  width: 480px;
-  height: 280px;
-  opacity: 0;
-  transition: .7s ease-in-out 180s;
-}
 
-.nav{
-  border: 1px solid red;
-  position: fixed;
-  top: 30%;
-  height: 30vh;
-  left: 0;
-}
 
