--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@
   transform: scale(1.3);
   animation: bubble 1s forwards;
 }
+
 @keyframes bubble {
   0%{
     transform: scale(1.3) 
@@ -351,6 +352,10 @@
   margin-top: 10rem;
 }
 
-
+.contact-container .trademark{
+  right: 5%;
+  bottom: 15px;
+  position: absolute;
+}
 
 
