--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@
   left: 0;
   width: 100%;
   padding: 0;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   color: #79E8B5;
 }
 .home-container{
@@ -30,7 +31,6 @@
 }
 .home-container, .about-container,.project{
   padding: 0;
-  position: relative;
   font-family: 'Nunito', sans-serif;
   align-content: center;
   text-align: center;
@@ -43,7 +43,6 @@
   display: inline-block;
   text-align: center;
   align-content: center;
-  width: 50%;
  
 }
 .title-box h1, .title-box h2{
@@ -62,14 +61,12 @@
   
 }
 .social-box{
+  
   border-top: 2px solid #FF8552;
 }
 .social-box, .social-box-footer{
   display: flex;
-  position: relative;
   justify-content: space-between;
-  width: 40%;
-  
 }
 .social-box-footer a{
   color: black;
@@ -79,7 +76,7 @@
   display: flex;
   flex-direction: column;
   width: 10%;
-  position: relative;
+  
 }
 .social-box a{
   text-decoration: none;
@@ -89,7 +86,7 @@
   display: flex;
   flex-direction: column;
   width: 10%;
-  position: relative;
+  
 }
 .social-box span{
   margin: 0;
@@ -131,34 +128,32 @@
   }
 }
 .about{  
+  text-align: center;
   margin-top: 0;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   background-color: #F9F9F9;
 }
 .about-container{
-  width: 100%;
+  height: auto;
   display: flex;
-  height: 100vh;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.about-container h1{
-  top: 2%;
-  left: 35%;
+.about h1{
   font-size: 2.5rem;
-  position: absolute;
   color: #ff543b;
   font-weight: 400;
 }
 .info{
-  width: 60%;
   text-align: justify;
   border-left: 1px solid #FF8552;
   border-radius: 30px;
-  padding: 1em;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  right: 5%;
-  top: 10%;
-  position: absolute;
+  padding: 1em; 
+}
+.info-container{
+  
+  width: 70%;
 }
 .info h3{
   margin: auto 1em;
@@ -177,10 +172,9 @@
   font-weight: 700;
 }
 .profile-container{
-  position: absolute;
-  left: 5%;
-  top: 15%;
+  
   width: 20%;
+  margin-left: 25px;
   padding-top: 20px;
   border-radius: 1000px;
 }
@@ -192,29 +186,25 @@
   box-shadow: 3px 3px 5px 6px #ccc
 }
 
-.skills{
+.about-container .skills{
+  
   border-left: 1px solid #FF8552;
   border-radius: 30px;
-  padding: 1em;
-  width: 60%;
-  right: 5%;
-  bottom: 9%;
+  min-height: 160px;
+  padding: 0.9rem 0.9rem 1.1rem;
   display: flex;
-  position: absolute;
   justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: center;
   flex-direction: row;
-
+  margin: 10px auto;
 }
 .skills-node{
   display: flex;
-  position: relative;
   text-align: center;
-  justify-content: center;
-  align-items: center;
-  margin: 5px 10px;
+  justify-content: center; 
   flex-direction: column;
+  margin: auto 1rem;
 }
 .skills-node img{
   display: block;
@@ -223,13 +213,37 @@
   margin: 15px 5px;
 }
 .skills-node p{
-  font-size: 15px; 
+  font-size: 0.9rem;
+  margin: 0;
+  text-align: center;
+  display: block;
+  padding: 0 1.5px; 
 }
 .skills-node:hover>p{
   font-weight: 600;
 }
+@media screen and (max-width: 450px){
+  .about-container{
+    flex-direction: column;
+  }
+  .info-container{
+    width: 100%;
+  }
+  .about-container .info,.about-container .skills{
+    border: none;
+  }
+  .about-container .skills{
+    background: #ccc;
+    border-radius: 0;
+    margin-bottom: 0;
+  }
+}
+
+
+
 .project{
   background-color: #444444;
+  
 }
 .project h1{
   margin: 2rem auto;
@@ -238,24 +252,23 @@
   color: #ff543b;
 }
 .project-card{
-  margin: 1em;
+  margin: 2em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  right: 0;
   width: 90%;
   transition: .2s;
+  
 }
 .project-img{
-  position: relative;
   width: 480px;
   height: 280px;
   display: flex;
   transition: .5s ease-in-out 180s;
 }
 .project-img img{
-  width:  100%;
-  height: auto;
+  width:  480px;
+  height: 100%;
   max-width: 100%;
   max-height: 100%;
   border-radius: 8px;
@@ -264,10 +277,8 @@
 }
 
 .project-info{
-  position: relative;
   width: 480px;
   height: 280px;
-  margin: 1em;
   right: 0;
   text-align: justify;
 }
@@ -286,6 +297,32 @@
 }
 .project-info .tech{
   color: #79E8B5;
+}
+.project-info a{
+  margin: 5px;
+}
+.project-info a:hover{
+  color: #ff543b
+}
+@media screen and (max-width: 450px){
+  .project-card{
+    flex-direction: column;
+    justify-content: flex-start;
+    height: auto;
+    width: 100%;
+    background: red;
+  }
+  .project-img, .project-info{
+    width: 100%;
+    height: 50%;
+    margin: 0 15px;
+  }
+  .project-img img{
+    width: 100%;
+    height: 200px;
+    padding: 0;
+    margin: 5px 0;
+  }
 }
 .contact-container{
   background-color: #F9F9F9;
@@ -324,7 +361,7 @@
 .email-name-container{
   display: flex;
   justify-content: space-between;
-  position: relative;
+  
   width: 100%;
 }
 .btn{
@@ -355,7 +392,31 @@
 .contact-container .trademark{
   right: 5%;
   bottom: 15px;
-  position: absolute;
 }
 
+.social-box-footer{
+  top: 25px;
+  margin: 25px;
+}
 
+@media screen and (max-width: 450px){
+  .title-box h1{
+    padding: 0.9rem 0;
+    font-size: 2.5rem;
+    letter-spacing: 0.2rem;
+    word-spacing: 0.1rem;
+  }
+  .social-box{
+    justify-content: center;
+    
+  }
+  .social-box a{
+  
+    margin: 0 10px;
+  }
+  .social-box a span{
+    margin: 5px 0;
+    color: inherit;
+  }
+  
+}
