--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,5 +1,6 @@
 .Nav {
   width: 100%;
+  background: red;
   height: 12vh;
   position: fixed;
   bottom: 0;
@@ -18,7 +19,6 @@
   border-radius: 50%;
   margin: 0 0.8rem;
   background-color: #333;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,6 +28,7 @@
 
 .Nav a:hover > .node {
   transform: scale(1);
+  cursor: pointer;
 }
 
 .Nav a.active > .node {
@@ -40,15 +41,15 @@
 .Nav::after {
   content: '';
   display: block;
-  width: 28rem;
+  width: 25rem;
   height: 25px;
-  border: 3px solid #ffffff99;
-  background-color: #ffffff99;
+  border: 1px solid #fff;
+  background-color: rgba(0, 0, 0, .5);
   position: absolute;
   bottom: 0;
   z-index: -1;
   transform: skew(-55deg);
-  box-shadow: 5px 8px 5px 6px #fefefe;
+  /* box-shadow: 5px 10px 1px 6px #ffffff99; */
 }
 
 @media screen and (max-width: 425px) {
