--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,6 @@
   height: auto;
   color: #79E8B5;
 }
-.home-container{
-  top: 30%;
-  left: 0;
-}
 .home-container, .about-container,.project{
   padding: 0;
   font-family: 'Nunito', sans-serif;
@@ -40,6 +36,7 @@
   flex-direction: column;
 }
 .title-box{
+  margin-top: 10%;
   display: inline-block;
   text-align: center;
   align-content: center;
@@ -309,15 +306,17 @@
     flex-direction: column;
     justify-content: flex-start;
     height: auto;
-    width: 100%;
-    background: red;
+    width: 90%;
+    align-items: center;
   }
   .project-img, .project-info{
     width: 100%;
     height: 50%;
-    margin: 0 15px;
+    align-items: center;
+    margin: 0;
   }
   .project-img img{
+
     width: 100%;
     height: 200px;
     padding: 0;
@@ -406,17 +405,23 @@
     letter-spacing: 0.2rem;
     word-spacing: 0.1rem;
   }
-  .social-box{
-    justify-content: center;
+  .social-box, .social-box-footer{
+    justify-content: space-between;
+    width: 90%;
     
   }
-  .social-box a{
-  
+  .social-box a, .social-box-footer a{
     margin: 0 10px;
   }
-  .social-box a span{
+  .social-box a span, .social-box-footer a span{
     margin: 5px 0;
     color: inherit;
+  }
+  .contact-container {
+    width: 100%
+  }
+  .contact-container form{
+    width: 90%;
   }
   
 }
