--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
   flex-direction: column;
 }
 .title-box{
+
   margin-top: 10%;
   display: inline-block;
   text-align: center;
@@ -255,7 +256,7 @@
   justify-content: space-between;
   width: 90%;
   transition: .2s;
-  
+  box-sizing: border-box;
 }
 .project-img{
   width: 480px;
@@ -308,15 +309,17 @@
     height: auto;
     width: 90%;
     align-items: center;
+    box-sizing: border-box
   }
   .project-img, .project-info{
     width: 100%;
     height: 50%;
     align-items: center;
     margin: 0;
+  
   }
   .project-img img{
-
+    box-sizing: border-box;
     width: 100%;
     height: 200px;
     padding: 0;
