--- a/src/App.css
+++ b/src/App.css
@@ -241,7 +241,7 @@
 
 .project{
   background-color: #444444;
-  
+  box-sizing: border-box;
 }
 .project h1{
   margin: 2rem auto;
@@ -252,6 +252,7 @@
 .project-card{
   margin: 2em;
   display: flex;
+  right: 0;
   flex-direction: row;
   justify-content: space-between;
   width: 90%;
@@ -302,6 +303,11 @@
 .project-info a:hover{
   color: #ff543b
 }
+.demo-note{
+  font-style: italic;
+  color: #fff;
+}
+
 @media screen and (max-width: 450px){
   .project-card{
     flex-direction: column;
@@ -316,11 +322,11 @@
     height: 50%;
     align-items: center;
     margin: 0;
+    box-sizing: border-box;
   
   }
   .project-img img{
     box-sizing: border-box;
-    width: 100%;
     height: 200px;
     padding: 0;
     margin: 5px 0;
