--- a/src/App.css
+++ b/src/App.css
@@ -349,27 +349,27 @@
 }
 .contact-email, .contact-name{
   font-size: 1rem;
-  padding: 5px 10px;
+  padding: 5px;
   border: 2px solid #333;
-  margin: 5px 0 10px;
+  margin-bottom: 1em
 }
 .contact-email, .contact-name{
-  width: 45%;
+  width: 48%;
 }
 .contact-message{
   width: 100%;
+  box-sizing: border-box;
   resize: vertical;
   border: 2px solid #333;
   font-size: 1rem;
-  padding: 5px 10px;
-  margin: 5px 0 10px;
+  padding: 5px;
+  margin-bottom: 1em;
   min-height: 130px;
   max-height: 29vh;
 }
 .email-name-container{
   display: flex;
   justify-content: space-between;
-  
   width: 100%;
 }
 .btn{
